@@ -1,3 +1,5 @@
-EBUILD eselect-ctags-9999.ebuild 769 RMD160 eb20918f2d6a5e61bd07ae7de409090d2d3d717e SHA1 502ee583f37c88170490e92663af1b874ce04824 SHA256 c36580dde90093f300e9b0b75f024d436b853ca8c0d79d1bf74f7f377d106486
-MISC ChangeLog 270 RMD160 1b133ed0d82f9a1f57919b71b274c80b3a585cdb SHA1 fa6aed710cab5343f285cc9ecf58d40687eb1070 SHA256 bd7f00c899e28a36870a6b7e1faf28d0d808c24c09f5d0fc0b5004b609a5f669
+DIST eselect-emacs-1.5_pre1.tar.bz2 7476 RMD160 fa347921fdb3e9c307ce474d664b43735b7eb968 SHA1 d5009a2b85b3e5f63a52f2e60da53c3573259995 SHA256 787f406c7b4fada6db35ada64f3168f8750ddcc6e4d032cc16ad8e0cb243c6c5
+EBUILD eselect-ctags-1.5_pre1.ebuild 764 RMD160 92a200e7e8368db868dec3aa542c2d0a16b3359c SHA1 3e625a883f4f15b4f5717e1e880b819f38a7705a SHA256 d9f0606a5ab7e8386b881b7a80b4ea151aef5bdb22b2df2257e42c7bcefdecdf
+EBUILD eselect-ctags-9999.ebuild 791 RMD160 4417692bd52a87a854cdf2b36bf2922db787e8c9 SHA1 2c7fff42ecd76aa743d90fc8519accb987c7d76f SHA256 fd28b56d48c91b2cbc8a810118a577bd9842726bbda2b5884a9eaa64e69caa7e
+MISC ChangeLog 433 RMD160 437013a1a360c5e7e27b903d39c3cf7b90757f0e SHA1 f8b5144f496f473a6fafa4cdefe47207bfe611a7 SHA256 c07c7600b604edcae32b07b25a6cf5c77399f737754888cd763475a068c6b4c6
 MISC metadata.xml 158 RMD160 415d172437ca754d24fc5ab186ba8e77934d96e4 SHA1 61f6eff9729cd87a725c2a70c81aca4270a17fc4 SHA256 1393bdef3a74343fdb40a112c7096a1af16f67e7a43413250de28dfe73810eab
