@@ -2,25 +2,22 @@
 # Distributed under the terms of the GNU General Public License v2
 # $Header: $
 
-inherit subversion
-
-MY_PN="eselect-emacs"
+MY_P="eselect-emacs-${PV}"
 DESCRIPTION="Manages ctags implementations"
 HOMEPAGE="http://www.gentoo.org/proj/en/lisp/emacs/"
 #SRC_URI="mirror://gentoo/${MY_P}.tar.bz2"
-ESVN_REPO_URI="svn://anonsvn.gentoo.org/emacs/${MY_PN}"
-ESVN_PROJECT="${MY_PN}"
+SRC_URI="http://dev.gentoo.org/~ulm/distfiles/${MY_P}.tar.bz2"
 
 LICENSE="GPL-2"
 SLOT="0"
-KEYWORDS="~alpha ~amd64 ~arm ~hppa ~ia64 ~mips ~ppc ~ppc64 ~s390 ~sh ~sparc ~sparc-fbsd ~x86 ~x86-fbsd"
+KEYWORDS="~alpha ~amd64 ~arm ~hppa ~ia64 ~m68k ~mips ~ppc ~ppc64 ~s390 ~sh ~sparc ~sparc-fbsd ~x86 ~x86-fbsd"
 IUSE=""
 
 DEPEND=""
 RDEPEND=">=app-admin/eselect-1.0.10
 	!<=app-admin/eselect-emacs-1.3"
 
-S="${WORKDIR}/${MY_PN}"
+S="${WORKDIR}/${MY_P}"
 
 src_compile() { :; }
 
