@@ -2,7 +2,13 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
-*eselect-ctags-1.3 (30 Apr 2008)
+*eselect-ctags-1.5_pre1 (23 May 2008)
+
+  23 May 2008; Ulrich Mueller <ulm@gentoo.org>
+  +eselect-ctags-1.5_pre1.ebuild, eselect-ctags-9999.ebuild:
+  Prerelease.
+
+*eselect-ctags-9999 (30 Apr 2008)
 
   30 Apr 2008; Ulrich Mueller <ulm@gentoo.org> +metadata.xml,
   +eselect-ctags-9999.ebuild:
